--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,17 @@
         "php": "^8.3",
         "althinect/filament-spatie-roles-permissions": "^2.2",
         "ariaieboy/filament-currency": "^1.8",
-        "filament/actions": "^3.2",
-        "filament/filament": "3.2",
+        "filament/actions": "3.2.123",
+        "filament/filament": "3.2.123",
+        "filament/infolists": "3.2.123",
+        "filament/tables": "3.2.123",
         "guzzlehttp/guzzle": "^7.2",
         "joaopaulolndev/filament-edit-profile": "^1.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "leandrocfe/filament-apex-charts": "^3.1",
-        "livewire/livewire": "3.5.12",
+        "livewire/livewire": "3.5.6",
         "psr/simple-cache": "^2.0",
         "pxlrbt/filament-excel": "^2.3",
         "spatie/laravel-permission": "^6.12"
@@ -32,8 +34,7 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0",
-        "livewire/livewire": "3.5.12"
+        "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
         "psr-4": {
